launchpad-buildd (134) UNRELEASED; urgency=medium

  * buildsnap: Drop explicit installation of sudo, now fixed in snapcraft.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 06 Aug 2015 13:56:15 +0100

launchpad-buildd (133) trusty; urgency=medium

  * Liberalise dep-wait matching regexes slightly so that they match
    multi-line output properly, as in the case where multiple
    build-dependencies are uninstallable.
  * If there is a mix of definite and dubious dep-wait output, then analyse
    the situation rather than trusting just the definite information.
  * Handle architecture restrictions, architecture qualifications, and
    restriction formulas (build profiles) in build-dependencies.
  * Add support for building snaps (LP: #1476405).
  * slave-prep: Output current python-debian version, useful for debugging
    build-dependency parsing problems.
  * Strip qualifications and restrictions even from dep-waits derived solely
    from sbuild output.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 04 Aug 2015 22:58:47 +0100

launchpad-buildd (132) trusty; urgency=medium

  * Fix incorrect dscpath construction that caused a crash when analysing
    dubious dep-wait cases.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 15 Jul 2015 12:09:08 +0100

launchpad-buildd (131) trusty; urgency=medium

  * slave-prep: Output current sbuild version, now that it's a separate
    package.
  * buildrecipe: Pass --only-source to "apt-get build-dep" to force it to
    use the source package we care about rather than trying to map through
    binary package names.
  * Make sbuild use "sudo -E" rather than just sudo.  It will still filter
    the environment itself, but this means that variables such as
    DEB_BUILD_OPTIONS will be passed through given our standard buildd
    sudoers configuration.
  * Analyse dubious dep-wait cases ("but it is not installed" or "but it is
    not going to be installed") manually to check whether any direct