@@ -3,7 +3,7 @@ Section: admin
 Priority: extra
 Maintainer: Adam Conrad <adconrad@ubuntu.com>
 Standards-Version: 3.9.5
-Build-Depends: debhelper (>= 5), python
+Build-Depends: debhelper (>= 7.0.50~), python
 
 Package: launchpad-buildd
 Section: misc
