@@ -1,2 +1,19 @@
-default/launchpad-buildd 			etc/default
-buildd-genconfig				usr/share/launchpad-buildd
+default/launchpad-buildd 	etc/default
+buildd-genconfig		usr/share/launchpad-buildd
+debian/upgrade-config		usr/share/launchpad-buildd
+sbuildrc			usr/share/launchpad-buildd
+template-buildd-slave.conf	usr/share/launchpad-buildd
+buildlivefs			usr/share/launchpad-buildd/slavebin
+buildrecipe			usr/share/launchpad-buildd/slavebin
+buildsnap			usr/share/launchpad-buildd/slavebin
+generate-translation-templates	usr/share/launchpad-buildd/slavebin
+mount-chroot			usr/share/launchpad-buildd/slavebin
+override-sources-list		usr/share/launchpad-buildd/slavebin
+remove-build			usr/share/launchpad-buildd/slavebin
+sbuild-package			usr/share/launchpad-buildd/slavebin
+scan-for-processes		usr/share/launchpad-buildd/slavebin
+slave-prep			usr/share/launchpad-buildd/slavebin
+sudo-wrapper			usr/share/launchpad-buildd/slavebin
+umount-chroot			usr/share/launchpad-buildd/slavebin
+unpack-chroot			usr/share/launchpad-buildd/slavebin
+update-debian-chroot		usr/share/launchpad-buildd/slavebin
