@@ -1,0 +1,1 @@
+usr/lib/launchpad-buildd/lpbuildd/check_implicit_pointer_functions.py	usr/share/launchpad-buildd/slavebin/check-implicit-pointer-functions
